// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNav close button can be hidden 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="euiCollapsibleNav"
        id="id"
      />
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiCollapsibleNav close button extends EuiButtonEmpty 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="euiCollapsibleNav"
        id="id"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiScreenReaderOnly--showOnFocus euiCollapsibleNav__closeButton class"
          data-test-subj="test"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiCollapsibleNav__closeButtonText"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiCollapsibleNav does not render if isOpen is false 1`] = `null`;

exports[`EuiCollapsibleNav is rendered 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-label="aria-label"
        class="euiCollapsibleNav testClass1 testClass2"
        data-test-subj="test subject string"
        id="id"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiScreenReaderOnly--showOnFocus euiCollapsibleNav__closeButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiCollapsibleNav__closeButtonText"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiCollapsibleNav props button 1`] = `
Array [
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-pressed="true"
    class="euiCollapsibleNav__toggle"
  />,
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="euiCollapsibleNav"
        id="id"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiScreenReaderOnly--showOnFocus euiCollapsibleNav__closeButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiCollapsibleNav__closeButtonText"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiCollapsibleNav props can alter mask props with maskProps without throwing error 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="euiCollapsibleNav"
        id="id"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiScreenReaderOnly--showOnFocus euiCollapsibleNav__closeButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiCollapsibleNav__closeButtonText"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiCollapsibleNav props dockedBreakpoint 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="euiCollapsibleNav"
        id="id"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiScreenReaderOnly--showOnFocus euiCollapsibleNav__closeButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiCollapsibleNav__closeButtonText"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiCollapsibleNav props isDocked 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <nav
      class="euiCollapsibleNav euiCollapsibleNav--isDocked"
      id="id"
    >
      <button
        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiScreenReaderOnly--showOnFocus euiCollapsibleNav__closeButton"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <div
            class="euiButtonContent__icon"
            data-euiicon-type="cross"
          />
          <span
            class="euiCollapsibleNav__closeButtonText"
          >
            close
          </span>
        </span>
      </button>
    </nav>
  </div>
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />
</div>
`;

exports[`EuiCollapsibleNav props onClose 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="euiCollapsibleNav"
        id="id"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiScreenReaderOnly--showOnFocus euiCollapsibleNav__closeButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiCollapsibleNav__closeButtonText"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiCollapsibleNav props showButtonIfDocked 1`] = `
Array [
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-pressed="true"
    class="euiCollapsibleNav__toggle"
  />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <nav
        class="euiCollapsibleNav euiCollapsibleNav--isDocked"
        id="id"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiScreenReaderOnly--showOnFocus euiCollapsibleNav__closeButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <div
              class="euiButtonContent__icon"
              data-euiicon-type="cross"
            />
            <span
              class="euiCollapsibleNav__closeButtonText"
            >
              close
            </span>
          </span>
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="-1"
    />
  </div>,
]
`;
